fix site-alert contrast

--- a/styles/anakin.css
+++ b/styles/anakin.css
@@ -16212,7 +16212,7 @@ main .content-right .promo-300x250:first-child {
   font-size: small;
   padding: 0.5rem 1rem;
   text-align: center;
-  color: beige;
+  color: black;
 }
 .site-alert p {
   margin: 0;
