--- a/styles/features.less
+++ b/styles/features.less
@@ -46,6 +46,7 @@
   padding: 0.5rem 1rem;
   text-align: center;
   color: beige;
+  color: black; // `beige` has contrast ratio of 2.1. `black` is 9.
   p {
     margin: 0;
     padding: 0;  
